# fulfillment-pipeline-sim

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260421_0001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routers/: __init__.py  simulation.py
backend/app/models/: __init__.py  base.py
backend/app/schemas/: __init__.py  simulation.py
backend/app/simulation/: __init__.py
backend/app/simulation/entities/: __init__.py  order.py  package.py
backend/app/simulation/stages/: __init__.py
backend/app/simulation/stages/ds/: __init__.py  dispatch.py  sortation.py
backend/app/simulation/stages/fc/: __init__.py  picking.py  receiving.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/controls/: SimulationControls.tsx
frontend/src/components/metrics/: MetricsPanel.tsx
frontend/src/components/pipeline/: PipelineView.tsx
frontend/src/hooks/: useSimulation.ts
frontend/src/services/: api.ts
frontend/src/store/: index.ts
frontend/src/types/: simulation.ts
